<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_nomegrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupos_nome_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_nomegrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupos_endereco_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/grupo_numero_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupo_bairro_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupos_cidade_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/grupos_estado_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_label_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupos_local_lista"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/layout_grupos_adapter_textview_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>



</LinearLayout>
