<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_layout_perguntas_quiz"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    android:layout_marginBottom="12dp"
    card_view:cardBackgroundColor="@color/colorGreenDefault"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_id_perguntas_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Pergunta 1"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        <!---->
        <RadioGroup
            android:id="@+id/card_view_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/card_view_radio_button_sim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/textView_sim_cardview"/>

            <RadioButton
                android:id="@+id/card_view_radio_button_as_vezes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checked="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/textView_as_vezes_cardview"/>

            <RadioButton
                android:id="@+id/card_view_radio_button_nao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/textView_nao_cardview"/>
        </RadioGroup>
    </LinearLayout>

</android.support.v7.widget.CardView>