<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E6C9"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ericclauberic.na.QuemSomosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/quem_somos_activity_admob"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/titulo_texto_quem_somos"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/text_view_quem_somos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_quem_somos"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<ImageView-->
            <!--android:src="@drawable/zoom_menos"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_margin="2dp"-->
            <!--android:onClick="onClickZoomMenos"/>-->
            <!--<ImageView-->
            <!--android:src="@drawable/zoom_mais"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_margin="2dp"-->
            <!--android:onClick="onClickZoomMais"/>-->

            <Button
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:onClick="onClickZoomMenos"
                android:text="- A" />

            <Button
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:onClick="onClickZoomMais"
                android:text="+ A" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/quem_somos_activity_admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</RelativeLayout>
